--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 .email {
   font-size: 30pt;
   text-align: center;
-   font-family: 'Varela Round', sans-serif;
+  font-family: 'Varela Round', sans-serif;
+  color: #ffae00;
 }
 
 .text {
   font-size: 15pt;
   text-align: center;
-   font-family: 'Varela Round', sans-serif;
+  font-family: 'Varela Round', sans-serif;
+  color: #ffae00;
 }
 
 .logo {
