--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-.text {
+.text1 {
   font-size: 50pt;
   text-align: center;
   font-family: 'Varela Round', sans-serif;
 }
 
-.email {
+.email1 {
   font-size: 15pt;
   text-align: center;
   font-family: 'Varela Round', sans-serif;
