--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-.text1 {
+.email {
   font-size: 50pt;
   text-align: center;
   font-family: 'Varela Round', sans-serif;
 }
 
-.email1 {
+.text {
   font-size: 15pt;
   text-align: center;
   font-family: 'Varela Round', sans-serif;
