--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 * License: https://bootstrapmade.com/license/
 */
 
-/*--------------------------------------------------------------
+/*-----------------------------------f---------------------------
 # General
 --------------------------------------------------------------*/
 body {
@@ -1588,6 +1588,9 @@ background-image: linear-gradient(to right top, #ffc75f, #fecd50, #fad341, #f4da
 }
 .contact .php-email-form button[type=submit]:hover {
   background: #8ec4dd;
+}
+.col-lg-6 {
+	width: 100%!important;
 }
 @-webkit-keyframes animate-loading {
   0% {
